--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -53,7 +53,8 @@ enable_pin: !PA5
 microsteps: 16
 rotation_distance: 8
 #endstop_pin: ^PC4   # par defaut
-endstop_pin: probe:z_virtual_endstop   # si BLTOUCH
+# si BLTOUCH, endstop_pin: virtual
+endstop_pin: probe:z_virtual_endstop   
 #position_endstop: 0.0  # par defaut, pas besoin si BLTOUCH
 position_max: 400
 
@@ -151,9 +152,12 @@ control_pin: PA4
 #   the controller board needs 5V mode and is 5V tolerant on its input
 #   signal line). Set to "OD" to request the sensor pin output use
 #   open drain mode. The default is to not request an output mode.
-x_offset: -55    # depends on the position of BLTouch from the nozzle
-y_offset: -13	 # depends on the position of BLTouch from the nozzle
-#z_offset = 0	 # depends on the position of BLTouch from the nozzle
+# depends on the position of BLTouch from the nozzle
+x_offset: -55
+# depends on the position of BLTouch from the nozzle
+y_offset: -13
+# depends on the position of BLTouch from the nozzle
+#z_offset = 0
 #speed:
 #samples:
 #sample_retract_dist:
@@ -170,12 +174,12 @@ y_offset: -13	 # depends on the position of BLTouch from the nozzle
 
 
 [safe_z_home]
-home_xy_position: 205,173 # Change coordinates to the center of your print bed
+# Change coordinates to the center of your print bed
+home_xy_position: 205,173
 speed: 60
-z_hop: 10                 # Move up 10mm
+# Move up 10mm
+z_hop: 10
 z_hop_speed: 5
-
-
 
 
 [bed_mesh]
